# blinkie

./: README.md  blinkie.js  index.js  package-lock.json  package.json
node/: README.md  blinkie.js  helpers.js  package.json
python/: Makefile  pyproject.toml  test.py
python/blinkie/: cli.py  funcs.py
